[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[project]

name = "pymlgymbo"
version = "0.0.0"
authors = [
  { name="Hideaki Takahashi" },
]
description = "Gradient-based Symbolic Execution Tool"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    'scikit-learn',
    'pybind11',
    'pybind11[global]',
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"
